# Thesis

./: .gitignore  CMakeLists.txt
src/veamy/: CMakeLists.txt  Veamer.cpp  Veamer.h  test.cpp
src/veamy/matrix/: BMatrix.cpp  BMatrix.h  BasePolinomials.cpp  DMatrix.cpp  DMatrix.h  lobattoQuadrature.cpp  lobattoQuadrature.h  matrixOps.cpp  matrixOps.h
src/veamy/matrix/dof/: DOF.h  DOFS.cpp  DOFS.h  DegreesOfFreedom.cpp  DegreesOfFreedom.h  EdgeDOF.cpp  EdgeDOF.h  InnerDOF.cpp  InnerDOF.h  OuterDOF.cpp  OuterDOF.h  OuterDOFS.cpp  OuterDOFS.h  VertexDOF.cpp  VertexDOF.h
src/veamy/matrix/integration/: IntegrationPolygon.cpp  IntegrationTriangle.cpp  IntegrationTriangle.h
src/veamy/models/: Edge.cpp  Edge.h  Element.cpp  Element.h
src/veamy/models/constraints/: Constraint.cpp  Constraint.h  Constraints.cpp  Constraints.h  ConstraintsContainer.cpp  EssentialConstraints.cpp  EssentialConstraints.h  NaturalConstraints.cpp  NaturalConstraints.h  PointConstraint.cpp  PointConstraint.h  SegmentConstraint.cpp  SegmentConstraint.h
src/veamy/models/dof/: DOF.h  DOFS.cpp  DOFS.h  EdgeDOF.cpp  EdgeDOF.h  InnerDOF.cpp  InnerDOF.h  OuterDOF.cpp  OuterDOF.h  VertexDOF.cpp  VertexDOF.h
src/veamy/models/integration/: IntegrationFunction.h  IntegrationPolygon.cpp  IntegrationPolygon.h  IntegrationTriangle.cpp  IntegrationTriangle.h
src/veamy/utilities/: Pair.cpp  Pair.h  operations.cpp  operations.h
src/x-poly/: CMakeLists.txt  main.cpp
src/x-poly/converter/: DelaunayVoronoiConverter.cpp  DelaunayVoronoiConverter.h
src/x-poly/delaunay/: DelaunayGenerator.h  TriangleDelaunayGenerator.cpp  TriangleDelaunayGenerator.h
src/x-poly/delaunay/lib/: CMakeLists.txt
src/x-poly/delaunay/structures/: EdgeData.h
src/x-poly/geometry/: Circle.cpp  Circle.h  CircularHole.cpp  CircularHole.h  Hole.cpp  Hole.h  Mesh.h  Point.cpp  Point.h  Point3D.cpp  Point3D.h  Polygon.cpp  Polygon.h  PolygonalHole.cpp  PolygonalHole.h  Region.cpp  Region.h  Segment.cpp  Segment.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  geometryFunctions.cpp
src/x-poly/geometry/generator/: UniformPointGenerator.h
src/x-poly/models/: Circle.cpp  Circle.h  Hole.h  Mesh.cpp  Mesh.h  Point3D.cpp  Polygon.cpp  PolygonalHole.cpp  PolygonalHole.h  Region.cpp  Region.h  Segment.cpp  Segment.h  Triangulation.cpp  Triangulation.h  Vector.h
src/x-poly/models/basic/: Point.cpp  Segment.cpp  Segment.h  Vector.h
src/x-poly/models/generator/: Functor.h  FunctorClasses.cpp  PointGenerator.cpp  PointGenerator.h  RandomPointGenerator.cpp  RandomPointGenerator.h  UniformPointGenerator.cpp  functions.cpp  functions.h
src/x-poly/models/hole/: CircularHole.cpp  CircularHole.h  Hole.h  PolygonalHole.cpp  PolygonalHole.h
src/x-poly/models/polygon/: Circle.cpp  Circle.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
src/x-poly/utilities/: List.cpp  List.h  convexHull.cpp  convexHull.h  geometryFunctions.cpp  geometryFunctions.h  utilities.cpp  utilities.h
src/x-poly/voronoi/: MeshGenerator.h  TriangleMeshGenerator.cpp  TriangleMeshGenerator.h
src/x-poly/voronoi/lib/: triangle.c  triangle.h
src/x-poly/voronoi/structures/: EdgeData.cpp  EdgeData.h  PointData.h
utilities/: CMakeLists.txt
utilities/include/utilities/: Deque.h  Pair.h  UniqueList.h  maputils.h  utilities.h
utilities/src/: Pair.cpp  utilities.cpp
veamy/: CMakeLists.txt
veamy/include/veamy/: Veamer.h
veamy/include/veamy/config/: VeamyConfig.h
veamy/include/veamy/matrix/: BasePolinomials.h  matrixOps.h
veamy/include/veamy/models/: Edge.h  Element.h
veamy/include/veamy/physics/: BodyForce.h  BodyForceVector.h  Material.h  ProblemConditions.h
veamy/include/veamy/postprocess/: ErrorMeasuresProcessor.h  PostProcessor.h
veamy/include/veamy/quadrature/: QuadraturePolygon.h
veamy/include/veamy/utilities/: Pair.h  SegmentPair.h  VeamyList.h  matrixOps.h  operations.h
veamy/src/: Veamer.cpp
veamy/src/config/: VeamyConfig.cpp
veamy/src/matrix/: BasePolinomials.cpp  lobattoQuadrature.cpp  matrixOps.cpp
veamy/src/matrix/integration/: IntegrationPolygon.cpp  IntegrationTriangle.cpp  gaussQuadrature.cpp
veamy/src/matrix/quadrature/: QuadraturePolygon.cpp
veamy/src/models/: Edge.cpp  Element.cpp
veamy/src/models/constraints/: Constraint.cpp  Constraints.cpp  (+3 more)
veamy/src/physics/: Material.cpp
veamy/src/postprocess/: PostProcessor.cpp
veamy/src/quadrature/: QuadraturePolygon.cpp
veamy/src/utilities/: Pair.cpp  VeamyList.cpp  matrixOps.cpp  operations.cpp
x-poly/: CMakeLists.txt
x-poly/main/: CMakeLists.txt  Stack.h  main.cpp
x-poly/src/config/: Config.cpp  XPolyConfig.cpp
x-poly/src/models/: Mesh.cpp  PolygonalMesh.cpp  Region.cpp  Triangulation.cpp
x-poly/src/utilities/: List.cpp  Pair.cpp  convexHull.cpp  geometryFunctions.cpp  stringUtils.cpp  utilities.cpp  xpolyutilities.cpp
x-poly/src/voronoi/: TriangleMeshGenerator.cpp
xMesh/: CMakeLists.txt
xMesh/src/: xMesh.cpp
xMesh/src/closing/: ClosestVertexClosingRule.cpp  TriangulateClosingRule.cpp
(+365 files in other folders)
